--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.16.0",
     "eslint-config-google": "^0.14.0",
     "jest": "^28.1.0"
   },
